// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with all props except translations 1`] = `
<WithTranslationContextComponent
  actions={
    Array [
      Object {
        "clickHandler": [Function],
        "label": "Action",
      },
    ]
  }
  closeHandler={[Function]}
  title="Modal title"
  translations={null}
>
  <Modal
    actions={
      Array [
        Object {
          "clickHandler": [Function],
          "label": "Action",
        },
      ]
    }
    closeHandler={[Function]}
    title="Modal title"
    translations={
      Object {
        "close": "Close",
      }
    }
  >
    <div
      className="overlay"
      onClick={[Function]}
      onScroll={[Function]}
      role="presentation"
    >
      <div
        className="root"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="head"
        >
          <h3
            className="headTitle"
          >
            Modal title
          </h3>
          <Button
            block={false}
            clickHandler={[Function]}
            disabled={false}
            icon="close"
            iconPosition="before"
            label="Close"
            labelVisibility="none"
            loading={false}
            priority="flat"
            size="large"
            type="button"
            variant="primary"
          >
            <button
              className="root
                    priorityFlat
                    sizeLarge
                    variantPrimary
                    
                    withIconBefore
                    withLabelHidden"
              disabled={false}
              onClick={[Function]}
              title="Close"
              type="button"
            >
              <span
                className="icon"
              >
                <Icon
                  icon="close"
                  size="large"
                >
                  <svg
                    className="rootSizeLarge"
                    style={
                      Object {
                        "fill": "currentColor",
                      }
                    }
                  >
                    <use
                      xlinkHref="#ic_close_48px"
                    />
                  </svg>
                </Icon>
              </span>
              <span
                className="label"
              >
                Close
              </span>
            </button>
          </Button>
        </div>
        <div
          className="body"
        >
          Modal content
        </div>
        <div
          className="footer"
        >
          <Button
            block={false}
            clickHandler={[Function]}
            disabled={false}
            icon={null}
            iconPosition="before"
            key="Action"
            label="Action"
            labelVisibility="all"
            loading={false}
            priority="default"
            size="medium"
            type="button"
            variant="primary"
          >
            <button
              className="root
                    priorityDefault
                    sizeMedium
                    variantPrimary"
              disabled={false}
              onClick={[Function]}
              title={null}
              type="button"
            >
              <span
                className="label"
              >
                Action
              </span>
            </button>
          </Button>
          <Button
            block={false}
            clickHandler={[Function]}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Close"
            labelVisibility="all"
            loading={false}
            priority="flat"
            size="medium"
            type="button"
            variant="primary"
          >
            <button
              className="root
                    priorityFlat
                    sizeMedium
                    variantPrimary"
              disabled={false}
              onClick={[Function]}
              title={null}
              type="button"
            >
              <span
                className="label"
              >
                Close
              </span>
            </button>
          </Button>
        </div>
      </div>
    </div>
  </Modal>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with mandatory props only 1`] = `
<WithTranslationContextComponent
  title="Modal title"
  translations={null}
>
  <Modal
    actions={Array []}
    closeHandler={null}
    title="Modal title"
    translations={
      Object {
        "close": "Close",
      }
    }
  >
    <div
      className="overlay"
      onClick={[Function]}
      onScroll={[Function]}
      role="presentation"
    >
      <div
        className="root"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="head"
        >
          <h3
            className="headTitle"
          >
            Modal title
          </h3>
        </div>
        <div
          className="body"
        >
          Modal content
        </div>
        <div
          className="footer"
        />
      </div>
    </div>
  </Modal>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with translations 1`] = `
<WithTranslationContextComponent
  closeHandler={[Function]}
  title="Modal title"
  translations={
    Object {
      "close": "Zavřít",
    }
  }
>
  <Modal
    actions={Array []}
    closeHandler={[Function]}
    title="Modal title"
    translations={
      Object {
        "close": "Zavřít",
      }
    }
  >
    <div
      className="overlay"
      onClick={[Function]}
      onScroll={[Function]}
      role="presentation"
    >
      <div
        className="root"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="head"
        >
          <h3
            className="headTitle"
          >
            Modal title
          </h3>
          <Button
            block={false}
            clickHandler={[Function]}
            disabled={false}
            icon="close"
            iconPosition="before"
            label="Zavřít"
            labelVisibility="none"
            loading={false}
            priority="flat"
            size="large"
            type="button"
            variant="primary"
          >
            <button
              className="root
                    priorityFlat
                    sizeLarge
                    variantPrimary
                    
                    withIconBefore
                    withLabelHidden"
              disabled={false}
              onClick={[Function]}
              title="Zavřít"
              type="button"
            >
              <span
                className="icon"
              >
                <Icon
                  icon="close"
                  size="large"
                >
                  <svg
                    className="rootSizeLarge"
                    style={
                      Object {
                        "fill": "currentColor",
                      }
                    }
                  >
                    <use
                      xlinkHref="#ic_close_48px"
                    />
                  </svg>
                </Icon>
              </span>
              <span
                className="label"
              >
                Zavřít
              </span>
            </button>
          </Button>
        </div>
        <div
          className="body"
        >
          Modal content
        </div>
        <div
          className="footer"
        >
          <Button
            block={false}
            clickHandler={[Function]}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Zavřít"
            labelVisibility="all"
            loading={false}
            priority="flat"
            size="medium"
            type="button"
            variant="primary"
          >
            <button
              className="root
                    priorityFlat
                    sizeMedium
                    variantPrimary"
              disabled={false}
              onClick={[Function]}
              title={null}
              type="button"
            >
              <span
                className="label"
              >
                Zavřít
              </span>
            </button>
          </Button>
        </div>
      </div>
    </div>
  </Modal>
</WithTranslationContextComponent>
`;
